// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link> renders 1`] = `
<Text
  accessibilityRole="link"
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  href={undefined}
  numberOfLines={undefined}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
      },
      false,
      false,
      false,
      false,
      Object {
        "fontSize": 16,
        "lineHeight": 20.8,
      },
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      Object {},
    ]
  }
/>
`;

exports[`<Link> when {href} 1`] = `
<Text
  accessibilityRole="link"
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  href="http://minube.com"
  numberOfLines={undefined}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
      },
      false,
      false,
      false,
      false,
      Object {
        "fontSize": 16,
        "lineHeight": 20.8,
      },
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      Object {},
    ]
  }
/>
`;

exports[`<Link> when {style} 1`] = `
<Text
  accessibilityRole="link"
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  href={undefined}
  numberOfLines={undefined}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
      },
      false,
      false,
      false,
      false,
      Object {
        "fontSize": 16,
        "lineHeight": 20.8,
      },
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      Object {
        "fontSize": 20,
        "fontWeight": "bold",
      },
    ]
  }
  visible={true}
/>
`;

exports[`<Link> when {styleHover} 1`] = `
<Text
  accessibilityRole="link"
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  href={undefined}
  numberOfLines={undefined}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
      },
      false,
      false,
      false,
      false,
      Object {
        "fontSize": 16,
        "lineHeight": 20.8,
      },
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      Object {},
    ]
  }
  styleHover={
    Object {
      "fontSize": 20,
      "fontWeight": "bold",
    }
  }
  visible={true}
/>
`;
